[gd_scene load_steps=17 format=2]

[ext_resource path="res://addons/Ren/main.gd" type="Script" id=1]
[ext_resource path="res://addons/Ren/types/def.gd" type="Script" id=2]
[ext_resource path="res://addons/Ren/text.gd" type="Script" id=3]
[ext_resource path="res://addons/PersistenceNode/persistence_node.gd" type="Script" id=4]
[ext_resource path="res://addons/PersistenceNode/icon.svg" type="Texture" id=5]
[ext_resource path="res://addons/Ren/statements/say.gd" type="Script" id=6]
[ext_resource path="res://addons/Ren/statements/ask.gd" type="Script" id=7]
[ext_resource path="res://addons/Ren/statements/menu.gd" type="Script" id=8]
[ext_resource path="res://addons/Ren/statements/show.gd" type="Script" id=9]
[ext_resource path="res://addons/Ren/statements/hide.gd" type="Script" id=10]
[ext_resource path="res://addons/Ren/statements/notify.gd" type="Script" id=11]
[ext_resource path="res://addons/Ren/statements/play_anim.gd" type="Script" id=12]
[ext_resource path="res://addons/Ren/statements/stop_anim.gd" type="Script" id=13]
[ext_resource path="res://addons/Ren/statements/play_audio.gd" type="Script" id=14]
[ext_resource path="res://addons/Ren/statements/stop_audio.gd" type="Script" id=15]
[ext_resource path="res://addons/Ren/statements/call_node.gd" type="Script" id=16]

[node name="Ren" type="Node"]

pause_mode = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
game_title = "Your New Game"
game_version = "0.0.1"
game_credits = "Your Company"
markups = "ren"
links_color = Color( 0.133333, 0.368627, 0.74902, 1 )
debug_on = true
save_folder = "saves"
save_password = "ren"
scenes_dir = "res://scenes/examples/"

[node name="Def" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="Text" type="Node" parent="." index="1"]

script = ExtResource( 3 )

[node name="Persistence" type="Node" parent="." index="2"]

script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
mode = 0
password = ""
folder_name = "PersistenceNode"
no_valid_names = [ "default", "example" ]
debug = false
beautifier_active = true
profile_name_min_size = 1
profile_name_max_size = 15

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="Say" type="Node" parent="." index="4"]

script = ExtResource( 6 )

[node name="Ask" type="Node" parent="." index="5"]

script = ExtResource( 7 )

[node name="Menu" type="Node" parent="." index="6"]

script = ExtResource( 8 )

[node name="Show" type="Node" parent="." index="7"]

script = ExtResource( 9 )

[node name="Hide" type="Node" parent="." index="8"]

script = ExtResource( 10 )

[node name="Notify" type="Node" parent="." index="9"]

script = ExtResource( 11 )

[node name="PlayAnim" type="Node" parent="." index="10"]

script = ExtResource( 12 )

[node name="StopAnim" type="Node" parent="." index="11"]

script = ExtResource( 13 )

[node name="PlayAudio" type="Node" parent="." index="12"]

script = ExtResource( 14 )

[node name="StopAudio" type="Node" parent="." index="13"]

script = ExtResource( 15 )

[node name="CallNode" type="Node" parent="." index="14"]

script = ExtResource( 16 )


